# Projects

Laboratorio_di_Programmazione/: CMakeLists.txt  Chat.cpp  Chat.h  IconBadgeMonitor.cpp  IconBadgeMonitor.h  Message.h  MessageNotifier.cpp  MessageNotifier.h  Observer.h  Subject.h  User.h  main.cpp
Laboratorio_di_Programmazione/test/: CMakeLists.txt  TestChat.cpp  TestMessage.cpp  TestUser.cpp  runAllTests.cpp
LaboratoryExercise/: CMakeLists.txt  Chat.cpp  Chat.h  IconBadgeMonitor.cpp  IconBadgeMonitor.h  Message.h  MessageNotifier.cpp  MessageNotifier.h  Schedule.h  Subject.h  User.h  main.cpp
LaboratoryExercise/Test/: CMakeLists.txt  testChat.cpp  testMessage.cpp
